--- a/app/views/responses/show.html.haml
+++ b/app/views/responses/show.html.haml
@@ -43,14 +43,15 @@
       .accordion
         - if @response.info_type == ['something_else']
           - help_category_result.children.each do |info_type|
-            .accord-single
-              .accord-toggle
-                %h2.govuk-heading-m
-                  = info_type.label
-                  =fa_icon 'chevron-down'
-              .accord-cont
-                - info_type.fragments.each do |fragment|
-                  = fragment.content.html_safe
+            - unless info_type.slug == 'more_help'
+              .accord-single
+                .accord-toggle
+                  %h2.govuk-heading-m
+                    = info_type.label
+                    =fa_icon 'chevron-down'
+                .accord-cont
+                  - info_type.fragments.each do |fragment|
+                    = fragment.content.html_safe
         - else
           - help_category_result.children.where(slug: @response["info_type"]).each do |info_type|
             .accord-single
