--- a/app/views/responses/show.html.haml
+++ b/app/views/responses/show.html.haml
@@ -41,37 +41,34 @@
           - help_category_result.fragments.each do |fragment|
             %p.govuk-body
               = fragment.content.html_safe
-        .accordion
+        #results-list
           - if @response.info_type == ['something_else']
             - help_category_result.children.each do |info_type|
               - unless info_type.slug == 'more_help'
-                .accord-single
-                  .accord-toggle
+                .single-result
+                  .result-title
                     %h2.govuk-heading-m
                       = info_type.label
-                      =fa_icon 'chevron-down'
-                  .accord-cont
+                  .result-content
                     - info_type.fragments.each do |fragment|
                       = fragment.content.html_safe
           - else
             - help_category_result.children.where(slug: @response["info_type"]).each do |info_type|
-              .accord-single
-                .accord-toggle
+              .single-result
+                .result-title
                   %h2.govuk-heading-m
                     = info_type.label
-                    =fa_icon 'chevron-down'
-                .accord-cont
+                .result-content
                   - info_type.fragments.each do |fragment|
                     = fragment.content.html_safe
 
           - more_help = help_category_result.children.where(slug: 'more_help').first
           - unless more_help.fragments.count == 1 && more_help.fragments.first.content == ""
-            .accord-single
-              .accord-toggle
+            .single-result
+              .result-title
                 %h2.govuk-heading-m
                   More help
-                  =fa_icon 'chevron-down'
-              .accord-cont
+              .result-content
                 - more_help.fragments.each do |fragment|
                   = fragment.content.html_safe
       - unless help_category_result == @help_category_results.last
