--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,7 +6,7 @@
   <title>Home and healthy</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="theme-color" content="#0b0c0c" />
-  
+
   <%= csrf_meta_tags %>
   <%= csp_meta_tag %>
 
@@ -39,7 +39,7 @@
           <span class="govuk-header__logotype">
             <%= image_tag("EssexIcon-150px.png", class: 'essex-logo') %>
             <span class="govuk-header__logotype-text">
-              Home and healthy
+              Home and Healthy
             </span>
           </span>
         </a>
@@ -54,7 +54,7 @@
 
     </main>
   </div>
-  
+
   <footer class="govuk-footer " role="contentinfo">
     <div class="govuk-width-container ">
       <div class="govuk-footer__meta">
