--- a/app/views/application/index.html.haml
+++ b/app/views/application/index.html.haml
@@ -1,7 +1,14 @@
-%h1.govuk-heading-xl
+%h1.govuk-heading-l
 	= @welcome_page.label
 
 - @welcome_page.fragments.each do |fragment|
 	= fragment.content.html_safe
 
 %p=link_to 'Get started', new_response_path, role: :button, draggable: false, class: 'govuk-button govuk-button--start'
+
+%hr
+
+
+%p.essex-details
+	This service is provided by
+	=image_tag('essex-logo.png', alt: 'Essex County Council')
