--- a/app/assets/stylesheets/results.scss
+++ b/app/assets/stylesheets/results.scss
@@ -11,4 +11,12 @@
       max-width: 300px;
     }
   }
+  .single-result {
+    margin-bottom: 25px;
+    padding-bottom: 25px;
+    border-bottom: 1px solid #333;
+  }
+  .single_category {
+    margin-bottom: 50px;
+  }
 }
