--- a/app/assets/stylesheets/results.scss
+++ b/app/assets/stylesheets/results.scss
@@ -17,6 +17,14 @@
     border-bottom: 1px solid #333;
   }
   .single_category {
+    margin-bottom: 75px;
+  }
+  .govuk-heading-l {
+    margin-bottom: 15px;
+  }
+  #contents {
     margin-bottom: 50px;
+    border-bottom: 1px solid #333;
+    padding-bottom: 25px;
   }
 }
