sort out spacing

--- a/app/assets/stylesheets/results.scss
+++ b/app/assets/stylesheets/results.scss
@@ -15,6 +15,12 @@
     margin-bottom: 25px;
     padding-bottom: 25px;
     border-bottom: 1px solid #333;
+
+    p {
+      &:last-child {
+        margin-bottom: 0;
+      }
+    }
   }
   .single_category {
     margin-bottom: 75px;
