--- a/app/views/responses/show.html.haml
+++ b/app/views/responses/show.html.haml
@@ -31,12 +31,13 @@
 
     - @help_category_results.each do |help_category_result|
       .single_category{id: help_category_result.label.parameterize }
-        %h2.govuk-heading-l
-          = help_category_result.label
-        %p.govuk-body
-          - help_category_result.fragments.each do |fragment|
-            %p.govuk-body
-              = fragment.content.html_safe
+        .single-result
+          %h2.govuk-heading-l
+            = help_category_result.label
+          %p.govuk-body
+            - help_category_result.fragments.each do |fragment|
+              %p.govuk-body
+                = fragment.content.html_safe
         #results-list
           - if @response.info_type == ['something_else']
             - help_category_result.children.each do |info_type|
