--- a/app/views/responses/show.html.haml
+++ b/app/views/responses/show.html.haml
@@ -98,3 +98,6 @@
       We’re sorry we can’t find what you’re looking for
     %p
       If you feel like you are having difficulties with the Home and Healthy service or just feel like you need to talk to someone you can contact the Navigator service on:
+
+#toTop
+  To the top
