--- a/app/views/responses/show.html.haml
+++ b/app/views/responses/show.html.haml
@@ -8,13 +8,19 @@
           Contents:
       %ul
         - @help_category_results.each do |help_category_result|
-          %li
+          %li.bold
             %a{href: '#' + help_category_result.label.parameterize }= help_category_result.label
             %ul
               - @info_types.each do |info_type|
                 %li
                   %a{href: '#' + help_category_result.label.parameterize + '_' + @help_category_results.first.children.where(slug: info_type).first.label.parameterize }
                     = @help_category_results.first.children.where(slug: info_type).first.label
+              - if @response.info_type == ['something_else']
+                - help_category_result.children.each do |info_type|
+                  - unless info_type.slug == 'more_help'
+                    %li
+                      %a{href: '#' + help_category_result.label.parameterize + '_' + info_type.label.parameterize }
+                        = info_type.label
 
         - if @response.help_category.include? 'something_else' && @response.suggested_help_category
           %li.govuk-info
@@ -51,8 +57,8 @@
                       = fragment.content.html_safe
           - else
             - help_category_result.children.where(slug: @response["info_type"]).each do |info_type|
-              .single-result
-                .result-title{id: help_category_result.label.parameterize + '_' + info_type.label.parameterize }
+              .single-result{id: help_category_result.label.parameterize + '_' + info_type.label.parameterize }
+                .result-title
                   %h2.govuk-heading-m
                     = info_type.label
                 .result-content
