small updates to structure/style of results page

--- a/app/assets/stylesheets/results.scss
+++ b/app/assets/stylesheets/results.scss
@@ -15,7 +15,7 @@ $brand: #682558;
   .single-result {
     margin-bottom: 25px;
     padding-bottom: 25px;
-    border-bottom: 1px solid #333;
+    border-bottom: 1px solid rgba(#333, 0.25);
 
     p {
       &:last-child {
