--- a/app/views/responses/new.html.haml
+++ b/app/views/responses/new.html.haml
@@ -27,8 +27,9 @@
     .govuk-form-group
       = f.submit "Continue", class: 'govuk-button no-margin'
 
+%hr
+%br
 %h2.govuk-heading-m
   Why do we need this?
 %span.govuk-body
-  We use your name to share your answers with your Navigator.
-  This is so they can talk to you face to face about your options. We won't share this information with anyone else.
+  We use your name so that when a Navigator comes to speak to you, we can share your answers so they know a little more about your needs.
