--- a/app/views/responses/show.html.haml
+++ b/app/views/responses/show.html.haml
@@ -95,7 +95,9 @@
     %br
     %h2.govuk-heading-m
       Need to speak to someone?
-    %p If you feel like you are having difficulties with the Home and Healthy service or just feel like you need to talk to someone you can contact the Navigator service on:
+    %p
+      If you feel like you are having difficulties with the Home and Healthy service or just feel like you need to talk to someone you can contact the Navigator service on:
+      =link_to "03000 777 8087", "tel:03000 777 8087"
     /   = @results.where(slug: 'more_help_generic').first.label
     / - @results.where(slug: 'more_help_generic').first.fragments.each do |fragement|
     /   = fragement.content.html_safe
@@ -105,6 +107,7 @@
       We’re sorry we can’t find what you’re looking for
     %p
       If you feel like you are having difficulties with the Home and Healthy service or just feel like you need to talk to someone you can contact the Navigator service on:
+      =link_to "03000 777 8087", "tel:03000 777 8087"
 
 #toTop
   To the top
