--- a/app/views/responses/new.html.haml
+++ b/app/views/responses/new.html.haml
@@ -1,7 +1,7 @@
 %span.govuk-caption-l
   Step 1 of 4
 %h1.govuk-heading-l.no-margin-bottom
-  What's your name?
+  What's your participant number?
 
 = form_for @response, url: {action: "create"} do |f|
 
@@ -19,11 +19,11 @@
   %fieldset.govuk-fieldset
     %legend.govuk-fieldset__legend.govuk-fieldset__legend--l
     .govuk-form-group
-      = f.label :forename, "First name", class: 'govuk-label'
+      / = f.label :forename, "Participant number", class: 'govuk-label'
       = f.text_field :forename, class: 'govuk-input govuk-input--width-10'
-    .govuk-form-group
+    .govuk-form-group.hidden
       = f.label :surname, "Last name", class: 'govuk-label'
-      = f.text_field :surname, class: 'govuk-input govuk-input--width-10'
+      = f.text_field :surname, :value => "lastname", class: 'govuk-input govuk-input--width-10'
     .govuk-form-group
       = f.submit "Continue", class: 'govuk-button no-margin'
 
