--- a/app/views/responses/show.html.haml
+++ b/app/views/responses/show.html.haml
@@ -1,7 +1,7 @@
 #resultsPage
   - if @help_category_results.size > 0
     %h1.govuk-heading-xl
-      Your results
+      Your recommendations
     #contents
       - if @response.info_type == ['something_else']
         %p We're sorry we don't have the type of information that you’re looking for. Here’s all the information that we do have for your choices.
