--- a/app/views/journeys/index.html.haml
+++ b/app/views/journeys/index.html.haml
@@ -3,7 +3,7 @@
   %span.govuk-caption-l
     Step 2 of 4
   %span.govuk-caption-l
-    We’ll ask you a few questions that’ll help us find the information you need.
+    We’ll ask you a few questions to help us understand your personal needs...
 
 
   = form_for @response, class: 'validation' do |f|
@@ -13,7 +13,7 @@
       %fieldset.govuk-fieldset{"aria-describedby" => "sign-in-hint"}
         %legend.govuk-fieldset__legend.govuk-fieldset__legend--l
           %h1.govuk-fieldset__heading
-            Choose a statement that best describes what you want to do
+            Please choose ONE statement that best describes what you want to do
         .form_errors.display_none
           %h4 Please select an option to continue
         .govuk-radios
@@ -23,7 +23,7 @@
               %label.govuk-label.govuk-radios__label.govuk-label--s{for: "response_category_#{k}"}= q['title']
               %span.govuk-hint.govuk-radios__hint{id: "#{k}-item-hint"}= q['hint']
               - if k == 'not_sure'
-                = f.text_field :suggested_category, class: 'govuk-input govuk-input--width-10 hidden_field', placeholder: 'Add optional details'
+                = f.text_field :suggested_category, class: 'govuk-input govuk-input--width-20 hidden_field', placeholder: ' tell us what you were looking for'
 
         %p
           = submit_tag 'Save and continue', class: 'govuk-button'
