--- a/app/views/responses/show.html.haml
+++ b/app/views/responses/show.html.haml
@@ -2,6 +2,8 @@
   - if @help_category_results.size > 0
     %h1.govuk-heading-xl
       Your recommendations
+    %p
+      We have found some information and services that might be useful for you. We're still learning, so please let us know at the end whether this information was helpful
     #contents
       - if @response.info_type == ['something_else']
         %p We're sorry we don't have the type of information that you’re looking for. Here’s all the information that we do have for your choices.
@@ -104,9 +106,11 @@
 
   - if @response.category == 'not_sure' || @response.help_category == ["something_else"]
     %h2.govuk-heading-l
-      We’re sorry we can’t find what you’re looking for
+      Can't find what you're looking for?
     %p
-      If you feel like you are having difficulties with the Home and Healthy service or just feel like you need to talk to someone you can contact the Navigator service on:
+      We're sorry that we don't have the information you were looking for.
+    %p
+      If you need to talk to someone you can contact the Navigator service on:
       =link_to "0333 777 8087", "tel:0333 777 8087"
 
 #toTop
