--- a/app/views/responses/no_information.haml
+++ b/app/views/responses/no_information.haml
@@ -1,7 +1,7 @@
 %h2.govuk-heading-l
   Can't find what you're looking for?
 %p
-  We're sorry that we don't have the information you were looking for.
+  We're sorry that we don't have the information you were looking for right now.
 %p
   If you need to talk to someone you can contact the Navigator service on:
   =link_to "0333 777 8087", "tel:0333 777 8087"
