--- a/app/views/responses/show.html.haml
+++ b/app/views/responses/show.html.haml
@@ -3,7 +3,7 @@
     %h1.govuk-heading-xl
       Your recommendations
     %p
-      We have found some information and services that might be useful for you. We're still learning, so please let us know at the end whether this information was helpful
+      We have found some information and services that might be useful for you. We're still learning, so please let us know at the end whether this information was helpful.
     #contents
       - if @response.info_type == ['something_else']
         %p We're sorry we don't have the type of information that you’re looking for. Here’s all the information that we do have for your choices.
