--- a/app/views/responses/show.html.haml
+++ b/app/views/responses/show.html.haml
@@ -59,7 +59,7 @@
                     - info_type.fragments.each do |fragment|
                       = fragment.content.html_safe
           - else
-            - help_category_result.children.where(slug: @response["info_type"]).each do |info_type|
+            - help_category_result.children.order(:position).where(slug: @response["info_type"]).each do |info_type|
               .single-result{id: help_category_result.label.parameterize + '_' + info_type.label.parameterize }
                 .result-title
                   %h2.govuk-heading-m
