force links that are buttons to not inherit hover styles of anchors

--- a/app/assets/stylesheets/remove_gds.scss
+++ b/app/assets/stylesheets/remove_gds.scss
@@ -49,6 +49,11 @@ footer {
     margin-top: 0;
   }
 }
+a.govuk-button {
+  &:hover {
+    color: #fff;
+  }
+}
 .govuk-button--start:hover {
   color: #fff !important;
 }
