--- a/app/views/responses/help_category_result.html.haml
+++ b/app/views/responses/help_category_result.html.haml
@@ -1,5 +1,9 @@
 - if @help_category_results.size > 1
-  = link_to "Back to your recommendations", response_path(@response), class: "govuk-button"
+  .govuk-breadcrumbs
+    %ol.govuk-breadcrumbs__list
+      %li.govuk-breadcrumbs__list-item
+        = link_to "Recommendations", response_path(@response), class: "govuk-breadcrumbs__link"
+      %li.govuk-breadcrumbs__list-item=@help_category_result.label
 
 %h2.govuk-heading-l
   = @help_category_result.label
@@ -18,3 +22,6 @@
 = render partial: 'save_for_later'
 
 = link_to "Answer questions again", journeys_path, class: "govuk-button"
+
+#toTop
+  To the top
