--- a/app/views/responses/help_category_result.html.haml
+++ b/app/views/responses/help_category_result.html.haml
@@ -2,11 +2,17 @@
   .govuk-breadcrumbs
     %ol.govuk-breadcrumbs__list
       %li.govuk-breadcrumbs__list-item
-        = link_to "Recommendations", response_path(@response), class: "govuk-breadcrumbs__link"
+        = link_to "Start questions again", journeys_path, class: "govuk-breadcrumbs__link"
+      %li.govuk-breadcrumbs__list-item
+        = link_to "Your recommendations", response_path(@response), class: "govuk-breadcrumbs__link"
       %li.govuk-breadcrumbs__list-item=@help_category_result.label
+  %h2.govuk-heading-l
+    = @help_category_result.label
+- else
+  %h2.govuk-heading-l
+    Your recommendation for
+    = @help_category_result.label
 
-%h2.govuk-heading-l
-  = @help_category_result.label
 - @help_category_result.fragments.each do |fragment|
   %p.govuk-body
     = fragment.content.html_safe
