--- a/app/views/responses/help_category_result.html.haml
+++ b/app/views/responses/help_category_result.html.haml
@@ -1,17 +1,12 @@
 - if @help_category_results.size > 1
-  .govuk-breadcrumbs
-    %ol.govuk-breadcrumbs__list
-      %li.govuk-breadcrumbs__list-item
-        = link_to "Start questions again", journeys_path, class: "govuk-breadcrumbs__link"
-      %li.govuk-breadcrumbs__list-item
-        = link_to "Your recommendations", response_path(@response), class: "govuk-breadcrumbs__link"
-      %li.govuk-breadcrumbs__list-item=@help_category_result.label
+  = link_to "Back to your recommendations", response_path(@response), class: 'govuk-back-link'
   %h2.govuk-heading-l
     = @help_category_result.label
 - else
   %h2.govuk-heading-l
     Your recommendation for
     = @help_category_result.label
+
 
 - @help_category_result.fragments.each do |fragment|
   %p.govuk-body
@@ -25,9 +20,12 @@
     - @help_category_result.children.order(:position).where(slug: @response["info_type"]).each do |info_type|
       = render partial: 'info_type_result', locals: {info_type: info_type}
 
-= render partial: 'save_for_later'
-
-= link_to "Answer questions again", journeys_path, class: "govuk-button"
+- if @help_category_results.size > 1
+  .save_for_later
+    %p context blah blah blah
+    = link_to "Answer questions again", journeys_path, class: "govuk-button"
+- else
+  = render partial: 'save_for_later'
 
 #toTop
   To the top
