--- a/app/views/responses/_start_again.haml
+++ b/app/views/responses/_start_again.haml
@@ -1,6 +1,6 @@
 %h2.govuk-heading-m
   Want to try the service again?
-%p
+%span
   Click below to answer the questions again.
-%p
+%br
   = link_to "Start again", journeys_path, class: "govuk-button"
