--- a/app/assets/stylesheets/results.scss
+++ b/app/assets/stylesheets/results.scss
@@ -31,7 +31,7 @@ $brand: #682558;
   }
   #contents {
     margin-bottom: 50px;
-    border-bottom: 1px solid #333;
+    border-bottom: 1px solid rgba(#333, 0.25);
     padding-bottom: 25px;
   }
   li.bold {
@@ -43,7 +43,9 @@ $brand: #682558;
     }
   }
 }
-
+.govuk-back-link {
+  margin-bottom: 25px;
+}
 
 #toTop {
   padding: 5px 10px;
@@ -57,5 +59,28 @@ $brand: #682558;
   font-size: 19px;
   &:hover {
     cursor: pointer;
+  }
+}
+
+.sub_page {
+  margin-bottom: 25px;
+}
+.sub_recommendation {
+  border-top: 1px solid rgba(#333, 0.25);
+  margin-top: 50px;
+  padding-top: 50px;
+  .single-result {
+    border-bottom: 1px solid rgba(#333, 0.25);
+    padding-top: 15px;
+    margin-bottom: 15px;
+    padding-bottom: 15px;
+    .govuk-button {
+      font-size: 19px;
+      margin-top: 10px;
+      padding-top: 10px;
+      padding-bottom: 6px;
+      padding-left: 15px;
+      padding-right: 15px;
+    }
   }
 }
