--- a/app/views/responses/help_category_result.html.haml
+++ b/app/views/responses/help_category_result.html.haml
@@ -11,7 +11,7 @@
 - @help_category_result.fragments.each do |fragment|
   %p.govuk-body
     = fragment.content.html_safe
-#results-list
+#results-list.sub_page
   - if @response.info_type == ['something_else'] # If info type is just something else then render all info
     - @help_category_result.children.each do |info_type|
       = render partial: 'info_type_result', locals: {info_type: info_type}
@@ -21,7 +21,9 @@
       = render partial: 'info_type_result', locals: {info_type: info_type}
 
 - if @help_category_results.size > 1
-  = render partial: 'recommendations_top_level'
+  .sub_recommendation
+    %h2.govuk-heading-l Your other recommendations
+    = render partial: 'recommendations_top_level'
 
 .save_for_later
   - if @help_category_results.size == 1
