--- a/app/views/steps/show.html.haml
+++ b/app/views/steps/show.html.haml
@@ -2,7 +2,7 @@
   - if @previous_step
     = link_to 'Back', journey_step_path(id: @previous_step, journey_id: params[:journey_id]), class: 'govuk-back-link'
   - else
-    = link_to 'Back', journeys_path, class: 'govuk-back-link'
+    = link_to 'Back', journeys_path(response_id: @response.id), class: 'govuk-back-link'
 
   %span.govuk-caption-l
     = "Step #{@current_step} of #{@step_count}"
