Add basic banner

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -45,6 +45,9 @@
         </a>
       </div>
     </div>
+    <div id="banner">
+      Help us improve the service. Go to service
+    </div>
   </header>
 
   <div class="govuk-width-container">
