--- a/app/views/responses/help_category_result.html.haml
+++ b/app/views/responses/help_category_result.html.haml
@@ -3,6 +3,8 @@
   %h2.govuk-heading-l
     = @help_category_result.label
 - else
+  = render partial: 'back_button'
+
   %h2.govuk-heading-l
     Your recommendation for
     = @help_category_result.label
