--- a/app/assets/stylesheets/results.scss
+++ b/app/assets/stylesheets/results.scss
@@ -15,7 +15,7 @@ $brand: #682558;
   .single-result {
     margin-top: 50px;
     margin-bottom: 50px;
-    padding-bottom: 50px;
+    padding-bottom: 25px;
     border-bottom: 1px solid rgba(#333, 0.25);
     .govuk-heading-m {
       font-size: 27px;
@@ -27,7 +27,7 @@ $brand: #682558;
     }
   }
   .single_category {
-    margin-bottom: 75px;
+    margin-bottom: 50px;
   }
   .govuk-heading-l {
     margin-bottom: 15px;
@@ -57,6 +57,9 @@ $brand: #682558;
   }
   p {
     margin-bottom: 35px;
+  }
+  .single-result {
+    padding-bottom: 50px;
   }
 }
 
