--- a/app/views/responses/_back_button.haml
+++ b/app/views/responses/_back_button.haml
@@ -1,2 +1,2 @@
 %div
-  = link_to 'Back', journey_step_path(id: @previous_step, journey_id: @response.category), class: 'govuk-back-link'
+  = link_to 'Back to previous question', journey_step_path(id: @previous_step, journey_id: @response.category), class: 'govuk-back-link'
