--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -48,7 +48,7 @@
     <div id="banner" class="govuk-phase-banner">
       <div class="govuk-width-container">
         <p class="govuk-phase-banner__content">
-          <strong class="govuk-tag govuk-phase-banner__content__tag ">alpha</strong>
+          <strong class="govuk-tag govuk-phase-banner__content__tag ">Pilot</strong>
           <span class="govuk-phase-banner__text">This is a new service – your feedback will help us to improve it.</span>
         </p>
       </div>
