--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -7,5 +7,8 @@ $govuk-image-url-function: "image-url";
 
 @import "remove_gds";
 @import "font-awesome";
+@import "accordion";
+@import "comfy/admin/cms/custom";
 
 @import "results";
+@import "errors";
