--- a/app/views/responses/_back_button.haml
+++ b/app/views/responses/_back_button.haml
@@ -1,2 +1,5 @@
 %div
-  = link_to 'Back to previous question', journey_step_path(id: @previous_step, journey_id: @response.category), class: 'govuk-back-link'
+  - if @previous_step
+    = link_to 'Back to previous question', journey_step_path(id: @previous_step, journey_id: @response.category), class: 'govuk-back-link'
+  - else
+    = link_to 'Back to previous question', journeys_path(response_id: @response.id), class: 'govuk-back-link'
