--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -49,7 +49,7 @@
       <div class="govuk-width-container">
         <p class="govuk-phase-banner__content">
           <strong class="govuk-tag govuk-phase-banner__content__tag ">Pilot</strong>
-          <span class="govuk-phase-banner__text">This is a new service – your feedback will help us to improve it.</span>
+          <span class="govuk-phase-banner__text">This is a new service – <a href="https://wearefuturegov.typeform.com/to/CbBKfE" target="_blank" title="Give us some feedback">your feedback</a> will help us to improve it.</span>
         </p>
       </div>
     </div>
