--- a/app/views/responses/_start_again.haml
+++ b/app/views/responses/_start_again.haml
@@ -1,6 +1,6 @@
 %h2.govuk-heading-m
   Want to start again?
 %span
-  Click below to give different answers
+  Click the button below to give us different answers
 %br
   = link_to "Start again", journeys_path, class: "govuk-button"
