--- a/app/assets/stylesheets/remove_gds.scss
+++ b/app/assets/stylesheets/remove_gds.scss
@@ -9,7 +9,9 @@ $brand: #682558;
   font-size: 24px;
   line-height: 28px;
 }
-
+.bold {
+  font-weight: bold;
+}
 .essex-logo {
   width: 30px;
   vertical-align: middle;
