--- a/app/views/journeys/index.html.haml
+++ b/app/views/journeys/index.html.haml
@@ -24,7 +24,10 @@
               %label.govuk-label.govuk-radios__label.govuk-label--s{for: "response_category_#{k}"}= q['title']
               %span.govuk-hint.govuk-radios__hint{id: "#{k}-item-hint"}= q['hint']
               - if k == 'not_sure'
-                = f.text_field :suggested_category, class: 'govuk-input govuk-input--width-20 hidden_field', placeholder: " tell us what you're looking for"
+                .hidden_field
+                  %div.bold Tell us what you are looking for
+                  %div.govuk-hint We won't be able to give you any help with this right now, but it will help us shape the future of this service
+                  = f.text_field :suggested_category, class: 'govuk-input govuk-input--width-20', placeholder: "Tell us what you're looking for"
 
         %p
           = submit_tag 'Save and continue', class: 'govuk-button'
