--- a/app/views/journeys/index.html.haml
+++ b/app/views/journeys/index.html.haml
@@ -26,7 +26,7 @@
               - if k == 'not_sure'
                 .hidden_field
                   %div.bold Tell us what you are looking for
-                  %div.govuk-hint We won't be able to give you any help with this right now, but it will help us shape the future of this service
+                  %div.govuk-hint Please let us know what's missing, so we can improve the service in the future
                   = f.text_field :suggested_category, class: 'govuk-input govuk-input--width-20', placeholder: "Tell us what you're looking for"
 
         %p
