--- a/app/views/steps/show.html.haml
+++ b/app/views/steps/show.html.haml
@@ -25,7 +25,7 @@
                 .hidden_field
                   %br
                   %div.bold Tell us what you are looking for
-                  %div.govuk-hint We won't be able to give you any help with this right now, but it will help us shape the future of this service
+                  %div.govuk-hint Please let us know what's missing, so we can improve the service in the future
                   = f.text_field a['suggested'], class: 'govuk-input govuk-input--width-20 hidden_field', placeholder: "Tell us what you're looking for"
 
         %p
