--- a/app/assets/stylesheets/results.scss
+++ b/app/assets/stylesheets/results.scss
@@ -49,6 +49,9 @@ $brand: #682558;
 .govuk-back-link {
   margin-bottom: 25px;
 }
+.generic-text {
+  border-bottom: 1px solid rgba(#333, 0.25);
+}
 
 #results-list {
   ul {
