--- a/app/views/responses/help_category_result.html.haml
+++ b/app/views/responses/help_category_result.html.haml
@@ -9,10 +9,10 @@
     Your recommendation for
     = @help_category_result.label.downcase
 
-
-- @help_category_result.fragments.each do |fragment|
-  %p.govuk-body
-    = fragment.content.html_safe
+.generic-text
+  - @help_category_result.fragments.each do |fragment|
+    %p.govuk-body
+      = fragment.content.html_safe
 #results-list.sub_page
   - if @response.info_type == ['something_else'] # If info type is just something else then render all info
     - @help_category_result.children.each do |info_type|
